feat: migrate to jdk 21 (#164)
* feat: migrate to jdk 21
- migrate to jdk21
- fix deprecation on new Locale